--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@types/styled-components": "^5.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.1",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "6.0.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -47,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
